# lily-sweep

./: .gitignore  AGENTS.md  LICENSE  README.md  action.yml  lilysweep.json  pyproject.toml
.github/workflows/: lilysweep.yml
docs/: architecture.md  ci.md  roadmap.md  rulepack.md
examples/unsafe_warehouse_agent/: README.md  agent_harness.py  lilysweep.json  robot_config.json  tool_dispatcher.py
examples/unsafe_warehouse_agent/ignored/: ignored_agent.py
examples/unsafe_warehouse_agent/ros/: bringup.launch.py
examples/unsafe_warehouse_agent/world/: warehouse_scenario.json
src/lily_sweep/: __main__.py  baseline.py  builtin_rules.json  cli.py  config.py  engine.py  formatters.py  init_project.py  models.py  rule_loader.py  suppressions.py
src/lily_sweep/scanners/: __init__.py  base.py  harness.py  patterns.py  prompt_injection.py  ros_control.py  scenario.py
tests/: test_scan.py
